--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@
 }
 .FormSimple .field input,
 .FormSimple .field textarea,
-.FormSimple .field select,
-.FormSimple .alert
+.FormSimple .field select
 {
     padding: 5px;
     width: 200px;
@@ -32,22 +31,21 @@
 
 /* ALERTS */
 
-.FormSimple .alert
-{
-    width:400px;
-    margin: 20px auto;
+.FormSimple .alert {
     padding: 15px;
-    text-align: center;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
-.FormSimple .alert.error
-{
-    color:#d94136;
-    border:1px solid #d94136;
+.FormSimple .alert.success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
 }
-.FormSimple .alert.confirm
-{
-    color:#308000;
-    border:1px solid #308000;
+.FormSimple .alert.failed {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
 }
 
 /* FIELD DISABLED */
